--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website 2nd</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="main">
+    <div id="main">  
       <div id="left">
         <div id="lnav">
-            (back)
+          <i class="ri-arrow-left-line"></i>
             <div id="lnavr">
                 <a href="">Home</a><a href="">Work</a>
+                <i class="ri-twitter-fill"></i>
             </div>
+        </div>
+        <div id="textcenter"><h1>Hello,</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, expedita?</p>
         </div>
       </div>
       <div id="right">
